# HealthcareMedConnectProject

./: .gitignore  README.md  pyproject.toml  requirements.txt
airflow/dags/: etl_pipeline.py
api/handlers/: analytics_handler.py  auth_handler.py  fhir_handler.py  ml_handler.py
api/models/: observation.py  patient.py  prediction.py
core/fhir/: client.py  parser.py  validators.py
core/ml/models/: risk_predictor.py
data/repositories/: observation_repo.py  patient_repo.py  prediction_repo.py
infrastructure/: app.py  requirements.txt
infrastructure/constructs/: api_gateway.py  dynamo_tables.py  eks_cluster.py  kinesis_streams.py  lambda_funcs.py
kubernetes/deployments/: ml_inference.yaml
scripts/: README.md  deploy.sh  generate_docs.py  seed_data.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_fhir_client.py
